--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sree</title>
-    <link rel="icon" href="img/sree.jpg">
+    <link rel="icon" href="./music.jpg">
     <link rel="stylesheet" href=".css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -43,7 +43,7 @@
             <p>This website was created by<strong>sree</strong> in 2025.</p>
         </div>
         <div class="col-6">
-            <img src="img/music.jpg" alt="error" width="100%" height="auto">
+            <img src="./sree.jpg" alt="error" width="100%" height="auto">
     </div>
     </div>
     </div>
